metadata/force-app/main/default/objects/CustomName_dUiFZ__c/CustomName_dUiFZ__c.object-meta.xml
<CustomObject>
    <description>Description_XFMRb</description>
    <label>CustomLabel_RgXwO</label>
    <nameField>
        <label>CustomLabel_RgXwO</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RgXwOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>