metadata/force-app/main/default/objects/CustomName_dUiFZ__c/fields/CustomField_fzDhx__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fzDhx__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgeDND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>